Bug #1501 - Bottom area of Person and Group profiles, gray excerpt boxes are too small
This commit also includes some slight tweaks to the on the fly truncation,
basically some fixes

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2024,12 +2024,11 @@ body{
 }
 #member-item-body{
     .panel{
-        height: 116px;
+        height: 132px;
         .panel-body{
             padding: 2%;
             h6{
-                margin-top: 0;
-                margin-bottom: 10px;
+                margin: 7px 0 12px;
             }
             p,
             a{
